k8s/09-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coarlumini-frontend
  namespace: coarlumini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coarlumini-frontend
  template:
    metadata:
      labels:
        app: coarlumini-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: frontend-node  # Selecciona el nodo específico para Frontend
      containers:
      - name: vue-app
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-data
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: frontend-data
        persistentVolumeClaim:
          claimName: frontend-data-pvc
      - name: nginx-config
        configMap:
          name: nginx-config
