k8s/13-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-coarlumini-ingress
  namespace: coarlumini
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coarlumini-frontend-service
                port:
                  number: 80
          # Backend Laravel
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: coarlumini-backend-service
                port:
                  number: 80
